--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.3",
     "chalk": "^4.1.2",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
